[package]
name = "polytest-builtins"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Built-in PolyTest plugins (transport, codec, board, reporter)"

[dependencies]
polytest-plugin-api = { workspace = true }
polytest-protocol = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
