[package]
name = "open-polytest"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PolyTest CLI — composition root for boards, transports, codecs, reporters"
readme = "../../README.md"

[[bin]]
name = "polytest"
path = "src/main.rs"

[dependencies]
polytest-plugin-api = { workspace = true }
polytest-protocol = { workspace = true }
polytest-builtins = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
