[package]
name = "polytest-plugin-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SOLID plugin traits for PolyTest (Transport, Codec, Board, Reporter, Extension)"

[dependencies]
polytest-protocol = { workspace = true }
thiserror = { workspace = true }
